# papermind

./: .env.example  .gitignore  Dockerfile.api  Makefile  README.md  design_guidelines.json  docker-compose.yml  pyproject.toml  sqlite.db
.emergent/: emergent.yml
.github/workflows/: eval.yml
api/: main.py  papers.py
data/bm25/: chunk_ids.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/cache/: cache.db  faiss.index
data/parsed/: 19c5e058258d.md  210e11e8f71b.md  492b1abd5824.md  4dd0dd178095.md  5194931d0bc1.md  7259de5942f0.md  7efed776d7d0.md  97496e256274.md  ed4d0ac35253.md  f508af927f8b.md
data/test_set/: questions.json
eval/: ragas_eval.py  run_eval.py  thresholds.py
eval/data/: fast_tier.json  full_tier.json
eval/results/: 2026-04-15_00-53-29_fast.json
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/about/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/chat/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  attr-accept.js  clsx.js  file-selector.js  lucide-react.js  next.js  object-assign.js  prop-types.js  react-dropzone.js  react-is.js  tailwind-merge.js  tslib.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/app/: layout.js  page.js
frontend/.next/static/webpack/: webpack.182f29da55f1feca.hot-update.js  webpack.2b757af01c0deb84.hot-update.js  webpack.68016e3de8e5da04.hot-update.js  webpack.683a0da9e9fe1846.hot-update.js  webpack.6d9145543f0864c0.hot-update.js  webpack.72af3f4d6bb69424.hot-update.js  webpack.90c921505ee97727.hot-update.js  webpack.97770ad69632075e.hot-update.js  webpack.97b4f28710b3663a.hot-update.js  webpack.a7d8c1e584b0a929.hot-update.js  webpack.b3ba65cf841f3560.hot-update.js  webpack.d1c746a2eeb6d068.hot-update.js  webpack.d85f79ffc70e6d43.hot-update.js  webpack.e3ea53044bcc17d5.hot-update.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/lib/: api.ts  mock-data.ts  utils.ts
ingestion/: bm25_index.py  chunker.py  citation_graph.py  embedder.py  entity_extractor.py  metadata.py  models.py  parser.py  pipeline.py
memory/: PRD.md
query/: agent.py  cache.py  pipeline.py  retriever.py  state.py  synthesizer.py  tracing.py
query/nodes/: __init__.py  classifier.py  gate.py  planner.py  replan.py  rerank.py  retrieval.py  synthesis.py
scripts/: audit_ingestion.py  auto_populate_chunks.py  c2t.py  find_chunk.py  fix_neo4j.py  generate_golden_set.py  generate_review_doc.py  inspect_all_parsed.py  parse_all_papers.py  refresh_graph.py  regenerate_cross_paper.py  review_chunks.py  run_agent.py  run_retrieval_eval.py  step1_verify_parse.py  step2_verify_chunking.py  step3_verify_metadata.py  verify_services.py
src/papermind/: __init__.py  config.py
src/papermind/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/papermind/eval/: __init__.py  ragas_eval.py  test_set.py
src/papermind/ingestion/: __init__.py  chunker.py  models.py  parser.py
src/papermind/retrieval/: __init__.py  embedder.py  fusion.py  reranker.py  sparse.py  store.py
src/papermind/scripts/: evaluate.py  ingest.py  query.py
src/papermind/ui/: app.py
test set/: cross_paper.json  single_paper.json
test_reports/: iteration_1.json  iteration_2.json
tests/: conftest.py  test_chunker.py  test_retrieval.py
(+26 files in other folders)
