[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papermind"
version = "0.1.0"
description = "Agentic RAG system for research literature"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.1.0",
    "anthropic>=0.34.0",
    "ragas>=0.2.0",
    "streamlit>=1.37.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "datasets>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
papermind-ingest = "papermind.scripts.ingest:main"
papermind-eval = "papermind.scripts.evaluate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/papermind"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=papermind --cov-report=term-missing -q"

[tool.coverage.run]
source = ["src/papermind"]
omit = ["*/tests/*", "*/ui/*"]
