[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papermind"
version = "0.1.0"
description = "Agentic RAG system for research literature — Step 1: ingestion + baseline"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/papermind"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
