[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papermind"
version = "0.1.0"
description = "Agentic RAG system for cross-document research synthesis"
requires-python = ">=3.11"
dependencies = [
    # Config & env
    "python-dotenv>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Parsing
    "llama-parse>=0.5.0",
    "llama-index-core>=0.11.0",
    "llama-index-readers-llama-parse>=0.3.0",

    # Embeddings
    "openai>=1.40.0",

    # Storage
    "qdrant-client>=1.11.0",
    "neo4j>=5.20.0",
    "bm25s>=0.2.0",

    # LLMs
    "anthropic>=0.34.0",
    "cohere>=5.9.0",

    # Observability — SDK v4+ (OTLP), requires Langfuse Cloud or self-hosted server v3+
    "langfuse>=4.0.0",

    # Agentic pipeline
    "langgraph>=0.2.0",

    # Semantic cache
    "gptcache>=0.1.43",

    # Eval
    "ragas>=0.2.0",

    # API (Phase 10)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",

    # Utils
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "query", "graph", "eval", "api", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
